# stock-agent

./: main.py  pyproject.toml
data/processed/: .gitignore  finetune_data_2026-02-22.csv.dvc
data/raw/: .gitignore  news_2026-02-22.csv.dvc  prices_2026-02-22.csv.dvc
models/qwen-finance/: README.md
models/qwen-finance-lora/: adapter_config.json  adapter_model.safetensors
models/qwen-finance/checkpoint-12/: trainer_state.json
src/dashboard/: app.py
src/finetune/: finetune.py  push_to_hub.py
src/scraper/: agent.py
src/storage/: storage.py
